--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,4 @@
+/* static/styles.css */
 * {
     margin: 0;
     padding: 0;
@@ -130,7 +131,7 @@
     color: #666;
     font-size: 18px;
     padding: 15px;
-    padding-bottom: 65px;
+    padding-bottom: 95px;
     text-align: center;
     box-shadow: 3px 7px 6px rgba(0, 0, 0, 0.1);
 }
