--- a/static/styles.css
+++ b/static/styles.css
@@ -237,6 +237,14 @@
     background-color: #333;
 }
 
+.info-box.gargalo {
+    box-shadow: 0px 0px 15px 5px rgba(255, 74, 61, 0.7);
+    border: 2px solid #ff4a3d;
+    transform: scale(1.05);
+    transition: all 0.3s ease-in-out;
+}
+
+
 .gauges {
     display: flex; 
     justify-content: space-around; 
@@ -334,6 +342,11 @@
     background-color: #ff4a3d;
 }
 
+.step.blue {
+    background-color: #004A8F;
+}
+
+
 .step.grey{
     background-color: #a5a5a5;
 }
@@ -351,18 +364,29 @@
     border-radius: 10px;
 }
 
+.step.green:after {
+    border-left: 15px solid #4CAF50;
+}
+
 .step.red:after {
     border-left: 15px solid #ff4a3d;
 }
 
-.step.step.green:after {
-    border-left: 15px solid #4CAF50;
-}
-
-.step.grey::after {
+.step.grey:after {
     border-left: 15px solid #a5a5a5;
 }
 
 .step:last-child:after {
     display: none;
+}
+
+.timeline {
+    display: flex;
+    align-items: center;
+    height: 50px;
+    background-color: #efefef;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-top: 10px;
+    overflow: hidden;
 }
