--- a/templates/indice.html
+++ b/templates/indice.html
@@ -17,8 +17,12 @@
         <h1>BALANCEAMENTO - LINHA DE MONTAGEM 1</h1>
         <img src="../static/imgs/sim_logo.png" alt="Sistema Integrados de Manufatura" class="sim-logo">
     </header>
+
     
     <div class="container">
+        <div class="status-bar">
+            <p id="status-datetime">Carregando data e hora...</p>
+        </div>
         <section class="indicators">
             <div class="indicator-box">
                 <div class="charts-container">
