--- a/static/styles.css
+++ b/static/styles.css
@@ -390,3 +390,16 @@
     margin-top: 10px;
     overflow: hidden;
 }
+
+.status-bar {
+    background-color: #efefef; /* Cor de fundo semelhante ao restante */
+    color: #000; /* Texto branco */
+    padding: 10px;
+    text-align: center;
+    font-size: 1.35rem;
+    font-weight: bold;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    padding: 10px;
+}
